Added User verification, email/PhoneExists checks using helper functions register with otp via email, phone registration doesn't work for now
